--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
     },
     "inbounds": [
         {
-            "port": 8080,
+            "port": PORT,
             "protocol": "vless",
             "settings": {
                 "clients": [
